web/book/tests/snapshots/snapshot__tests__prql__language-features__target-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nprql version:\"0.6.0\"\n\nfrom employees\n"
---
SELECT
  *
FROM
  employees

